<resources>
    <string name="app_name">SMS список покупок</string>
    <string name="add">+</string>
    <string name="hidden">Список покупок свернут</string>
    <string name="click_to_restore">Нажмите, чтобы развернуть</string>
    <string name="running">Приложение запущено</string>
    <string name="quit">Выход</string>
    <string name="delete_all">Удалить все</string>
    <string name="delete_checked">Удалить купленное</string>
    <string name="list_cleared">Список очищен</string>
    <string name="checked_deleted">Купленное удалено</string>
    <string name="add_item_hint">Добавить</string>
    <string name="settings">Настройки</string>
    <string name="manage_autocomplete">Управление словарем</string>
    <string name="manage_autocompelte_summary">Добавление, удаление и редактирование наименований покупок, предназначенных для корректной работы автоматического распознавания из SMS, автодополнения при вводе названий, а также формирования типового списка покупок.\nСловарь дополняется автоматически при создании основного списка и при получении SMS.</string>
    <string name="delete">Удалить</string>
    <string name="selected">Выбрано:</string>
    <string name="cancel">Отмена</string>
    <string name="update">Обновить</string>
    <string name="search">Поиск</string>
    <string name="select_all">Выбрать все</string>
    <string name="divider_setting">Разделитель списка покупок</string>
    <string name="divider_setting_summary">По умолчанию в качестве разделителя списка покупок из SMS используется \",\". Можно настроить свой разделитель, например \";\" или \"/\".</string>
    <string name="import_from_sms">Импорт из SMS</string>
    <string name="all_products_in_list">Сформировать типовой список покупок</string>
    <string name="all_products_in_list_summary">Основной список будет заполнен всеми покупками, добавленными ранее.\nПеречень добавляемых покупок приведен в словаре.</string>
    <string name="main">Основные</string>
    <string name="more">Дополнительно</string>
    <string name="sms_parser_settings_title">Автоматическое распознавание SMS</string>
    <string name="sms_parser_settings_summary">При получении SMS со списком покупок будет автоматически запускаться приложение и заполняться полученным списком.</string>
    <string name="pref_enable_acra">Отправлять отчеты об ошибках</string>
    <string name="pref_enable_acra_summary">При возникновении ошибок в работе программы будет автоматичеси отправляться анонимный отчет с отладочной информацией.</string>
    <string name="added">Добавлено:</string>
    <string name="sort">Сортировка</string>
    <string name="font_size">Размер шрифта</string>
    <string name="save">Сохранить</string>
    <string name="list_sort_alphabetical">Сортировать список по алфавиту</string>
    <string name="list_sort_alphabetical_summary">По умолчанию сортировка списка осуществляется по порядку добавления.</string>
    <string name="background_color">Цвет фона</string>
    <string name="view_settings">Внешний вид</string>
    <string name="font_size_summary">Размер шрифта в списке покупок.\nЗначение по умолчанию - 18</string>
    <string name="color_picker_summary">Цвет фона списка покупок.</string>
    <string name="font_color">Цвет шрифта</string>
    <string name="font_color_summary">Цвет шрифта в списке покупок.</string>
    <string name="background_transparency">Прозрачность фона</string>
    <string name="background_transparency_summary">Прозрачность фона списка покупок.\nЗначение по умолчанию - 90%</string>
    <string name="minimize_autostart_title">Автозапуск в свернутом виде</string>
    <string name="minimize_autostart_summary">При получении SMS со списком покупок окно приложения будет запускаться в свернутом виде.</string>
    <string name="import_from_web">Получить с сервера</string>
    <string name="loading">Загрузка…</string>
    <string name="no_lists_found">Списки покупок отсутствуют</string>
    <string name="error">Ошибка!\n</string>
    <string name="email_setting">E-mail</string>
    <string name="email_setting_summary">Для получения списка покупок с сервера</string>
    <string name="email_setting_error">Адрес e-mail указан не верно!\nУкажите корректный адрес.</string>
    <string name="add_email_in_settings">Введите адрес e-mail в настройках приложения.</string>
    <string name="deleting">Удаление…</string>
    <string name="error_loading">Ошибка получения списка</string>
    <string name="new_shopping_list_from_web">Вам отправлен новый список.\nНажмите для получения…</string>
</resources>
